# win_etw

./: Cargo.toml  README.md
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
win_etw_logger/: Cargo.toml
win_etw_logger/examples/: hello.rs
win_etw_logger/src/: lib.rs
win_etw_macros/: Cargo.toml
win_etw_macros/examples/: linux.rs
win_etw_macros/src/: errors.rs  lib.rs  tests.rs  well_known_types.rs
win_etw_metadata/: Cargo.toml
win_etw_metadata/src/: lib.rs
win_etw_provider/: Cargo.toml
win_etw_provider/examples/: simple.rs
win_etw_provider/src/: data_descriptor.rs  guid.rs  interop.rs  lib.rs  metadata.rs  provider.rs  trace_logging.rs  types.rs
