[package]
name = "win_etw_macros"
version = "0.1.0"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.9"
syn = { version = "1.0.18", features = ["full", "extra-traits"] }
quote = "1.0.3"
win_etw_metadata = { path = "../win_etw_metadata" }
uuid = { version = "0.8.1" }
