[package]
name = "win_etw_metadata"
version = "0.1.0"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"

[features]
default = ["metadata_headers"]
metadata_headers = []
