[package]
name = "win_etw_provider"
version = "0.1.0"
authors = ["Arlie Davis <ardavis@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["evntprov", "winerror", "evntrace"] }
widestring = "0.4.0"
zerocopy = "0.3.0"
win_etw_macros = { path = "../win_etw_macros" }
win_etw_metadata = { path = "../win_etw_metadata" }

[dev-dependencies]
atomic_lazy = { git = "https://github.com/sivadeilra/atomic_lazy" }

[features]
std = []
default = ["std"]
